class notes/Oops/oop5
In Java, variables are classified based on their scope, lifetime, and where they are declared.

types of variable in java
_______________________________

Types of Variables in Java:
1. Local Variable  
2. Instance Variable  
3. Static (Class) Variable  
4. Parameter Variable 
datatype variablename;

class classname
{
	datatype variablename;   
	static datatype variablename;
	classname()
	{
	   datatype variablename;
	}
	retyrntype methodname(datatype variablename)
	{
	    datatype variablename
	}
}

 1. Local Variable
Declared inside a method, constructor, or block.

Created when method is called, destroyed after method ends.

Not accessible outside the method.

class Demo {
    void display() {
        int localVar = 10;  // Local variable
        System.out.println("Local variable: " + localVar);
    }
    public static void main(String arg[])
    {
      Demo d=new Demo();
      d.display();
    }
}


2. Parameter Variable
Passed as an argument to a method or constructor.

Treated like a local variable.
class Demo {
    void sum(int a, int b) {  // a and b are parameter variables
        int result = a + b;
        System.out.println("Sum: " + result);
    }
      public static void main(String arg[])
    {
      Demo d=new Demo();
      d.sum(10,20);
    }
}




3. Instance Variable
Declared inside the class but outside any method or constructor.

Also called non-static variable.

Each object has its own copy.


class Demo {
    int instanceVar = 20;  // Instance variable

    void show() {
        System.out.println("Instance variable: " + instanceVar);
    }
}




Example:

 class X
 {
 	int a;  //instance variable

 }

 class Test
{
	
		public static void main(String arg[])
		{
			
		  X ob=new X();
		  System.out.println(ob.a);
		   

		}
}



o/p:
0


 class X
 {
 	int a;  //instance variable

 }

 class Test
{
	
		public static void main(String arg[])
		{
			
		  X ob=new X();
		  System.out.println(ob.a);
		  X obj=new X();
		  System.out.println(obj.a);
		  ob.a=10;
		  obj.a=20;
		   System.out.println(ob.a+" "+obj.a);
		   

		}
}



o/p:
0
0
10 20


 class X
 {
 	int a;  //instance variable

 }

 class Test
{
	
		public static void main(String arg[])
		{
			
		 
		  System.out.println(X.a);
		
		   

		}
}

o/p:
Test.java:14: error: non-static variable a cannot be referenced from a static context
                  System.out.println(X.a);
                                      ^
1 error


instance variable access static area must be required object.



class variable:
________________

3. Static (Class) Variable
Declared with the static keyword.

Shared among all objects.

Loaded only once at class loading time.

class Demo {
    static int staticVar = 30;  // Static variable

    static void display() {
        System.out.println("Static variable: " + staticVar);
    }
    public static void main(String arg[])
    {
        display();
    }
}






 class X
 {
 	static int a;  

 }

 class Test
{
	
		public static void main(String arg[])
		{
			
		 
		  System.out.println(X.a);
		
		   

		}
}

o/p:0




 class X
 {
 	static int a;  

 }

 class Test
{
	
		public static void main(String arg[])
		{
			
		 
		  System.out.println(X.a); //0
		  X ob=new X();
		  System.out.println(ob.a); //0
		  ob.a=10;
		  System.out.println(X.a); //10
		    System.out.println(ob.a); //10
		   

		}
}

o/p:
0
0
10
10



 class X
 {
 	static int a;  

 }

 class Test
{
	
		public static void main(String arg[])
		{
			
		
		  X ob=new X();
		  X ob1=new X();
		  ob.a=10;
		  ob1.a=30;
		  ob1.a=ob.a+ob1.a;
		  System.out.println(ob.a+"  "+ob1.a+"  "+X.a);
		   

		}
}



o/p:
60  60  60



 class X
 {
 	 int a;  

 }

 class Test
{
	
		public static void main(String arg[])
		{
			
		
		  X ob=new X();
		  X ob1=new X();
		  ob.a=10;
		  ob1.a=30;
		  ob1.a=ob.a+ob1.a;
		  System.out.println(ob.a+"  "+ob1.a);
		 // System.out.println(X.a); error
		   

		}
}


o/p:
10 40


differnce between class variable and instance variable
_____________________________________________________
 class X
 {
 	static  int a; 
 	 int b; 

 }

 class Test
{
	
		public static void main(String arg[])
		{
			
		  X ob=new X();
		  X ob1=new X();
		 ob.a=5;
		 ob.b=7;
		 ob1.a=10;
		 ob1.b=20;
		 System.out.println(ob.a+" "+ob.b); // 10  7
		 System.out.println(ob1.a+" "+ob1.b);//10 20
		   

		}
}



o/p:
10 7
10 20


 class X
 {
 	private static  int a; 
 	private  int b; 
 	X()
 	{
           ++a;
           ++b;
 	}
       void show()
       {
       	System.out.println(a+" "+b);
       }

 }

 class Test
{
	
		public static void main(String arg[])
		{
			
		  X ob=new X();
		  X ob1=new X();
		 X ob2=new X();
		 ob.show();
		 ob1.show();
		 ob2.show();

		}
}



o/p:
3 1
3 1
3 1


 class X
 {
 	private static  int a; 
 	private  int b; 
 	X()
 	{
           ++a;
           ++b;
 	}
       void show()
       {
       	System.out.println(a+" "+b);
       }

 }

 class Test
{
	
		public static void main(String arg[])
		{
			
		  X ob=new X();
		  ob.show();
		  X ob1=new X();
		   ob1.show();
		 X ob2=new X();
		 
		
		 ob2.show();

		}
}
o/p:
1  1
2 1
3 1




//count no of object
_______________________________
 class X
 {
 	static  int a; 
 	 
 	X()
 	{
           ++a;
         
 	}
       
 }

 class Test
{
	
		public static void main(String arg[])
		{
			
		  X ob=new X();
		
		  X ob1=new X();

		 X ob2=new X();
		 System.out.println(" no of object="+X.a);

		}
}






| Type      | Declared Inside           | Scope               | Lifetime           |
| --------- | ------------------------- | ------------------- | ------------------ |
| Local     | Method / Constructor      | Within method/block | During method call |
| Instance  | Inside class (non-static) | Per object          | Till object lives  |
| Static    | Inside class (static)     | Shared across class | Till class loaded  |
| Parameter | In method signature       | Within method only  | During method call |


class Demo {
    int instanceVar = 10;          // ✅ Instance Variable (non-static, object-specific)
    static int staticVar = 20;     // ✅ Static Variable (class-level, shared)

    Demo() {
        int constructorVar = 30;   // ✅ Local Variable (constructor scope)
        System.out.println("Constructor Var: " + constructorVar);
    }

    void show(int paramVar) {      // ✅ Parameter Variable (method parameter)
        int localVar = 40;         // ✅ Local Variable (method scope)
        System.out.println("Instance: " + instanceVar);
        System.out.println("Static: " + staticVar);
        System.out.println("Parameter: " + paramVar);
        System.out.println("Local: " + localVar);
    }
}


class Test {
    public static void main(String[] args) {
        Demo d = new Demo();         // Constructor executes
        d.show(50);                  // Passing 50 as parameter variable
    }
}


Constructor Var: 30
Instance: 10
Static: 20
Parameter: 50
Local: 40

VariableType	     Name	               Where Declared	                           Scope
Instance Variable	instanceVar	     In class,     non-static	                 Per object
Static Variable	   staticVar	       In class, with static	                   Shared in class
Local Variable	  constructorVarlocalVar	Inside constructor / method	Only      in that block
Parameter Variable	paramVar	      In method parameter	                        Only inside method